# Wex-PB-Ingestor

./: .gitignore  Bryant R454B_2025_TSM 1 7 2026 (1).xlsx  Carrier R454B_2025_TSM 1 7 2026.xlsx  Gallatin_Flat_Rate_Pricebook.xlsx  Hollowtop Flat Rate Pricebook.xlsx  Kinzer Price Book.xlsx  README.md  app.py  pyproject.toml
config/enrichment/: manufacturer_domains.json
config/mappings/: crosswalk_bundle_single_part_single_labor.csv  crosswalk_single_part.csv  crosswalk_supplier_loader.csv  customer_manifest.csv
config/markup/: default_global_tiered_markup.json
docs/mapping/: approval_checklist.md  fallback_importer_spec.md  mapping_contract.md
samples/base-templates/: Single part single labor template.xlsx  Single part template.xlsx  Supplier Loader Template JUN2024.xlsx
samples/completed-templates/: Temp_Control_Parts_Catalog.xlsx
samples/distributor-books/: Day & Night R454b Price Pages Master TEMPLATE 5 5 2025.xlsx  Gallatin River All Pricing 9-15-25.xlsx  Hollowtop Heating All Pricing 9-15-25.xlsx
schemas/: markup_profile.schema.json  qa_run_report.schema.json
src/pb_ingestor/: cli.py  crosswalk.py  enrichment.py  ingest.py  mapper.py  markup.py  output.py  pipeline.py
tests/: test_ingest_fallback.py  test_mapper.py  test_markup.py
