[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pb-ingestor"
version = "0.2.0"
description = "Pricebook ingestion CLI"
requires-python = ">=3.10"
dependencies = [
  "openpyxl>=3.1.0",
  "jsonschema>=4.0.0",
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
  "streamlit>=1.36.0"
]

[project.scripts]
pb-ingestor = "pb_ingestor.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
